Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.4(EOL), 10.5(EOL), 10.6(EOL), 10.11, 11.4
Description
In MDEV-13459, all deprecation warnings were disabled for HandlerSocket. It turns out that all of them are about auto_ptr, which in C++11 was deprecated and replaced with std::unique_ptr.
Starting with MariaDB Server 10.4, we depend on C++11.
Attachments
Issue Links
- relates to
-
MDEV-13459 5.5: warnings, when compiling with gcc-7.x
-
- Closed
-