MDEV-35632 HandlerSocket uses deprecated C++98 auto_ptr

Change uses of auto_ptr to unique_ptr